<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_gameId"
        android:text="@string/game_service_key"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ll_game_tiles"
        />

    <Button
        android:id="@+id/button_cheatMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheat_mode"
        app:layout_constraintTop_toBottomOf="@id/tv_gameId"
        app:layout_constraintStart_toStartOf="@id/button_standardMode"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ll_game_tiles"
        />

    <Button
        android:id="@+id/button_standardMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/standard_mode"
        app:layout_constraintTop_toBottomOf="@id/tv_gameId"
        app:layout_constraintStart_toEndOf="@+id/button_cheatMode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ll_game_tiles"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_player_name"
        android:text="@string/player_name"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_opponent_name"
        app:layout_constraintTop_toBottomOf="@id/ll_game_tiles"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="20dp"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_opponent_name"
        android:text="@string/opponent"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@id/tv_player_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_game_tiles"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="20dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ll_game_tiles"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/zero_zero"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text=""
                android:textSize="30sp"
                android:layout_margin="4dp"/>

            <Button
                android:id="@+id/zero_one"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text=""
                android:textSize="30sp"
                android:layout_margin="4dp"
                />

            <Button
                android:id="@+id/zero_two"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text=""
                android:textSize="30sp"
                android:layout_margin="4dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/one_zero"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text=""
                android:textSize="30sp"
                android:layout_margin="4dp"/>

            <Button
                android:id="@+id/one_one"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text=""
                android:textSize="30sp"
                android:layout_margin="4dp"
                />

            <Button
                android:id="@+id/one_two"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text=""
                android:textSize="30sp"
                android:layout_margin="4dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/two_zero"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text=""
                android:textSize="30sp"
                android:layout_margin="4dp"/>

            <Button
                android:id="@+id/two_one"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text=""
                android:textSize="30sp"
                android:layout_margin="4dp"/>

            <Button
                android:id="@+id/two_two"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text=""
                android:textSize="30sp"
                android:layout_margin="4dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>